--- a/client-js/app/elements/labrad-registry.html
+++ b/client-js/app/elements/labrad-registry.html
@@ -88,7 +88,7 @@
       <table>
         <tbody is="selectable-table"  id="dirList" attr-for-selected="name" selected="{{selDir}}" on-tap="selectDir">
           <template is="dom-repeat" items="{{dirs}}">
-            <tr name="{{item.name}}">
+            <tr name="{{item.name}}" draggable="true">
               <td>
                 <a is="app-link" path="{{item.url}}" href="{{item.url}}">
                   <dir-item kind="folder">{{item.name}}</dir-item>
@@ -100,7 +100,7 @@
         </tbody>
         <tbody is="selectable-table" is="keyList" attr-for-selected="name"  selected="{{selKey}}" on-tap="selectKey">
           <template is="dom-repeat" items="{{keys}}">
-            <tr name="{{item.name}}">
+            <tr name="{{item.name}}" draggable="true">
               <td>
                 <dir-item kind="key">{{item.name}}</dir-item>
               </td>
