--- a/client-js/app/elements/labrad-registry.html
+++ b/client-js/app/elements/labrad-registry.html
@@ -73,17 +73,8 @@
     iron-autogrow-textarea {
       max-width: 400px;
     }
-    #search-bar {
-      padding: 0px 10px;
-    }
-    #search-bar input {
-      font-family: var(--primary-font-family);
-      font-size: 15px;
-      width: 50%;
-      padding: 10px;
-      border: 0;
-      border-radius: 2px;
-      -webkit-appearance: none;
+    #search {
+      padding: 0px 20px;
     }
   </style>
   <template>
@@ -97,10 +88,9 @@
       </section>
     </div>
     <div id="reg-area">
-      <div id="search-bar">
-        <iron-icon icon="search"></iron-icon>
-        <input type="search" id="search" value="{{filterText::input}}" placeholder="search registry">
-      </div>
+      <paper-input id="search" value="{{filterText::input}}" placeholder="search registry">
+        <iron-icon prefix icon="search"></iron-icon>
+      </paper-input>
       <table>
         <tbody is="selectable-table" attr-for-selected="name" selected="{{selDir}}" on-tap="selectDir">
           <template id="dirList" is="dom-repeat" items="{{dirs}}" filter="filterFunc">
