--- a/client-js/app/index.html
+++ b/client-js/app/index.html
@@ -32,7 +32,6 @@
 
   <link rel="stylesheet" href="/styles/main.css">
   <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="/elements/elements.html">
 
   <!-- Dev mode configuration. The following comment is a placeholder
        that gets replaced in dev mode by an inline script that configures
@@ -40,9 +39,10 @@
        websocket api connections should be made. Comments are stripped
        when we built the dist version, so this has no effect in prod. -->
   <!-- DEV_MODE_CONFIG -->
+
+  <link rel="import" href="/bundle.html">
 </head>
 
 <body unresolved class="fullbleed layout vertical">
-  <script src="/scripts/bundle.js"></script>
 </body>
 </html>
